welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:30: error: illegal start of simple pattern
for (compt(<-1 to 4)){
           ^PictureMono1:34: error: ')' expected but '}' found.
}
^